--- a/app/views/contact/new.html.erb
+++ b/app/views/contact/new.html.erb
@@ -28,7 +28,7 @@
 			    </div>
 			     <div class="row"><br></div>
 				<button type="submit" name="button" class='btn btn-primary btn-lg'>
-				<span>Enviar</span>
+				<span>Enviar Solución</span>
 				</button>
 				<% end %>
 		   </div>
